<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/background"
    android:clickable="true"
    android:focusable="true">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/login_top_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="@dimen/dimen60" />

    <TextView
        android:id="@+id/login_welcome_message"
        style="TextAppearanceHeader2Semibold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen8"
        android:layout_marginTop="@dimen/dimen8"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/welcomed_title"
        android:textColor="@color/color3"
        android:textSize="@dimen/text40"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        tools:text="@string/welcomed_title" />

    <TextView
        android:id="@+id/login_signup_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text20"
        android:layout_marginTop="@dimen/dimen8"
        android:layout_marginStart="@dimen/dimen8"
        android:textStyle="italic"
        android:fontFamily="@font/montserrat_regular"
        android:textColor="@color/color3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_welcome_message"
        tools:text="@string/welcomed_subtitle"
        android:text="@string/welcomed_subtitle"/>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/login_top_guideline" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/skip_for_now_button"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen8"
        android:layout_marginEnd="@dimen/dimen8"
        android:layout_marginBottom="28dp"
        android:background="@drawable/bg_yellow_gradient"
        android:gravity="center"
        android:text="@string/skip_for_now"
        android:textAllCaps="false"
        android:textColor="@color/text_color"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="@string/skip_for_now" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/register_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen16"
        android:layout_marginStart="@dimen/dimen8"
        android:layout_marginEnd="@dimen/dimen8"
        android:layout_marginBottom="@dimen/dimen32"
        android:background="@drawable/translucent_background"
        android:fontFamily="@font/montserrat_semibold"
        android:textStyle="bold"
        android:textAllCaps="false"
        android:textColor="@color/yellow"
        android:gravity="center"
        tools:text="@string/register"
        android:text="@string/register"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/sign_in_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dimen24"
        android:layout_marginStart="@dimen/dimen8"
        android:layout_marginEnd="@dimen/dimen8"
        android:background="@drawable/translucent_background"
        android:text="@string/sign_in"
        android:fontFamily="@font/montserrat_semibold"
        android:textAllCaps="false"
        android:textColor="@color/yellow"
        android:textStyle="bold"
        android:gravity="center"
        app:layout_constraintBottom_toTopOf="@+id/register_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="@string/sign_in" />


</androidx.constraintlayout.widget.ConstraintLayout>