<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/background">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/login_top_guideline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="@dimen/dimen40" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/image_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/login_top_guideline" >

        <ImageView
            android:id="@+id/register_ripple"
            android:layout_width="@dimen/dimen200"
            android:layout_height="@dimen/dimen200"
            android:src="@drawable/ic_ripple"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="@dimen/dimen88"
            android:layout_height="@dimen/dimen88"
            android:src="@drawable/ic_launcher"
            app:civ_border_color="@color/white"
            app:civ_border_width="2dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>



    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/name_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen32"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_container">

        <EditText
            android:id="@+id/register_first"
            android:layout_width="0dp"
            android:layout_height="@dimen/dimen44"
            android:layout_marginHorizontal="@dimen/dimen12"
            android:background="@drawable/translucent_grey_background"
            android:hint="@string/first_name"
            android:gravity="center"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:outlineAmbientShadowColor="@color/color1"
            android:textAlignment="center"
            android:textColor="@color/text_color"
            android:textColorHint="@color/text_color"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/middle_guide_line"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/middle_guide_line"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5"
            />

        <EditText
            android:id="@+id/register_last"
            android:layout_width="0dp"
            android:layout_height="@dimen/dimen44"
            android:layout_marginHorizontal="@dimen/dimen12"
            android:background="@drawable/translucent_grey_background"
            android:hint="@string/last_name"
            android:gravity="center"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:outlineAmbientShadowColor="@color/text_color"
            android:textAlignment="center"
            android:textColor="@color/text_color"
            android:textColorHint="@color/text_color"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/middle_guide_line"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <EditText
        android:id="@+id/register_email"
        android:layout_width="0dp"
        android:layout_height="@dimen/dimen44"
        android:layout_marginHorizontal="@dimen/dimen12"
        android:layout_marginTop="@dimen/dimen16"
        android:background="@drawable/translucent_grey_background"
        android:hint="@string/email"
        android:gravity="center"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:outlineAmbientShadowColor="@color/text_color"
        android:textAlignment="center"
        android:textColor="@color/text_color"
        android:textColorHint="@color/text_color"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/name_container" />


    <EditText
        android:id="@+id/register_password"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen44"
        android:layout_marginHorizontal="@dimen/dimen12"
        android:layout_marginTop="@dimen/dimen16"
        android:background="@drawable/translucent_grey_background"
        android:hint="@string/password"
        android:gravity="center"
        android:inputType="textPassword"
        android:maxLines="1"
        android:outlineAmbientShadowColor="@color/text_color"
        android:textAlignment="center"
        android:textColor="@color/text_color"
        android:textColorHint="@color/text_color"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_email" />

    <EditText
        android:id="@+id/register_confirm_password"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen44"
        android:layout_marginHorizontal="@dimen/dimen12"
        android:layout_marginTop="@dimen/dimen16"
        android:background="@drawable/translucent_grey_background"
        android:hint="@string/confirm_password"
        android:gravity="center"
        android:inputType="textPassword"
        android:maxLines="1"
        android:outlineAmbientShadowColor="@color/text_color"
        android:textAlignment="center"
        android:textColor="@color/text_color"
        android:textColorHint="@color/text_color"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_password" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dimen12"
        android:layout_marginBottom="@dimen/dimen60"
        android:background="@drawable/bg_yellow_gradient"
        android:text="@string/register"
        android:textAllCaps="false"
        android:textColor="@color/text_color"
        android:textSize="@dimen/text20"
        android:textStyle="bold"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>