<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/logout_button"
        android:layout_width="28dp"
        android:layout_height="28dp"
        android:layout_marginVertical="@dimen/dimen12"
        android:layout_marginEnd="@dimen/dimen20"
        android:clickable="true"
        android:focusable="true"
        android:src="@drawable/logout"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/profile_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen20"
        android:textColor="@color/white"
        android:textSize="@dimen/text24"
        android:text="Profile"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="60dp"/>

    <TextView
        android:id="@+id/profile_full_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen32"
        android:text="Profile"
        android:visibility="gone"
        android:textSize="@dimen/text32"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline" />

    <TextView
        android:id="@+id/nick_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profile"
        android:visibility="gone"
        android:textAllCaps="false"
        android:textSize="@dimen/text20"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_full_name" />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/middle_guide_line"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="206dp" />

    <LinearLayout
        android:visibility="gone"
        android:id="@+id/queue_information"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen32"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toStartOf="@+id/middle_guide_line"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/nick_name">

        <TextView
            android:id="@+id/number_of_songs_in_queue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:gravity="center"
            android:text="@string/_30"
            android:textSize="@dimen/dimen24"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/queue_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/queue"
            android:textSize="@dimen/text16" />
    </LinearLayout>

    <LinearLayout
        android:visibility="gone"
        android:id="@+id/favorites_information"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen32"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/middle_guide_line"
        app:layout_constraintTop_toBottomOf="@id/nick_name">

        <TextView
            android:id="@+id/number_of_songs_in_favorites"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/white"
            android:text="@string/_30"
            android:textSize="@dimen/dimen24"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/favorites_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:maxLines="1"
            android:text="@string/favorites"
            android:textSize="@dimen/text16" />
    </LinearLayout>

    <TextView
        android:visibility="gone"
        android:id="@+id/playlists"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen64"
        android:layout_marginStart="@dimen/dimen12"
        android:text="@string/playlist"
        android:textColor="@color/white"
        android:textSize="@dimen/text28"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/queue_information" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:visibility="gone"
        android:id="@+id/favorites_container"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="@dimen/dimen32"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/playlists">

        <androidx.cardview.widget.CardView
            android:id="@+id/player_track_cardview"
            android:layout_width="@dimen/dimen48"
            android:layout_height="@dimen/dimen48"
            android:layout_marginVertical="@dimen/dimen8"
            android:layout_marginStart="@dimen/dimen20"
            app:cardCornerRadius="@dimen/dimen8"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/player_track_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/ic_favorites_playlist" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/favorites_text_playlist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Favorites"
            android:textSize="@dimen/text20"
            android:layout_marginStart="@dimen/dimen20"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/player_track_cardview"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/favorites_arrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_next"
            android:layout_marginEnd="@dimen/dimen24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ProgressBar
        android:id="@+id/profile_loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminateTint="@color/white"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />




</androidx.constraintlayout.widget.ConstraintLayout>