<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:clickable="true"
    android:focusable="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/login_top_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="@dimen/dimen60" />

        <ImageView
            android:id="@+id/login_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/login_top_guideline" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/email_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen100"
            android:gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_logo">

            <EditText
                android:id="@+id/login_email"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen44"
                android:layout_marginHorizontal="@dimen/dimen12"
                android:background="@drawable/translucent_grey_background"
                android:gravity="center"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:outlineAmbientShadowColor="@color/color1"
                android:textColor="@color/text_color"
                android:textColorHint="@color/text_color"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/dimen12"
                android:src="@drawable/ic_user"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/login_email"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen16"
            android:gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/email_container">

            <EditText
                android:id="@+id/login_password"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen44"
                android:layout_marginHorizontal="@dimen/dimen12"
                android:background="@drawable/translucent_grey_background"
                android:gravity="center"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:outlineAmbientShadowColor="@color/color1"
                android:textColor="@color/text_color"
                android:textColorHint="@color/text_color"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/dimen12"
                android:src="@drawable/ic_eye_off"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/login_password"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/register_button_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dimen12"
            android:layout_marginBottom="@dimen/dimen60"
            android:background="@drawable/bg_yellow_gradient"
            android:gravity="center"
            android:text="@string/sign_in"
            android:textAllCaps="false"
            android:textColor="@color/text_color"
            android:textSize="@dimen/text20"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:text="@string/sign_in" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>